tests/fixtures/invalid/missing-partition-key.bprint
{
  "schemaVersion": "v1",
  "namespace": "acme.orders",
  "entities": [
    {
      "name": "Order",
      "primaryKey": {},
      "fields": [
        { "name": "orderId", "type": "string", "required": true }
      ]
    }
  ]
}
